--- a/app/elements/loading-placeholder/loading-placeholder.html
+++ b/app/elements/loading-placeholder/loading-placeholder.html
@@ -23,7 +23,7 @@ Usage:
     }
   </style>
   <template attributes="data">
-    <paper-card hidden={{!loadingStatus}} heading="Loading Data... please wait">
+    <paper-card hidden={{!loadingStatus}} heading="Daten werden geladen... Bitte warten.">
       <div class="card-content">
         <!-- <paper-progress indeterminate></paper-progress> -->
         <paper-spinner active></paper-spinner>
