--- a/app/elements/no-rights/no-rights.html
+++ b/app/elements/no-rights/no-rights.html
@@ -20,9 +20,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <paper-material elevation="1">
       <paper-item>
         <paper-item-body class="paper-item-body-0">
-          <h4>You have insufficient rights!</h4>
+          <h4>Sie haben keine Zugriffsrechte für diesen Bereich</h4>
 
-          <paper-button on-click="toHome">Back</paper-button>
+          <paper-button on-click="toHome">Zurück</paper-button>
 
         </paper-item-body>
 
