--- a/app/elements/create-docent/create-docent.html
+++ b/app/elements/create-docent/create-docent.html
@@ -89,12 +89,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 	<template>
 		<div class="" hidden="{{!isAdmin}}">
 			<paper-toolbar id="createDocentToolbar">
-				<h2>Create a new Docent</h2>
+				<h2>Neue Lehrkraft erstellen</h2>
 			</paper-toolbar>
 
 			</paper-toolbar>
 			<paper-material class="50percent">
-				<label class="prev">Preview</label>
+				<label class="prev">Vorschau</label>
 				<div class="spacer"></div>
 				<paper-item>
 					<paper-item-body three-line class="paper-item-body-0">
@@ -112,12 +112,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 						<paper-item-body three-line class="paper-item-body-0">
 
 							<paper-input-container>
-								<label>First Name</label>
+								<label>Vorname</label>
 								<input is="iron-input" name="firstName" type="text" bind-value="{{firstName::input}}" required>
 							</paper-input-container>
 
 							<paper-input-container>
-								<label>Last Name</label>
+								<label>Nachname</label>
 								<input is="iron-input" name="lastName" type="text" bind-value="{{lastName::input}}" required>
 							</paper-input-container>
 
@@ -130,24 +130,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 						<paper-item-body three-line class="paper-item-body-0">
 
 							<paper-input-container>
-								<label>Subject 1</label>
+								<label>Fach 1</label>
 								<input is="iron-input" name="subject1" type="text" required bind-value="{{subject1::input}}">
 							</paper-input-container>
 
 							<paper-input-container>
-								<label>Subject 2</label>
+								<label>Fach 2</label>
 								<input is="iron-input" name="subject2" type="text" bind-value="{{subject2::input}}">
 							</paper-input-container>
 
 
 							<paper-input-container>
-								<label>Subject 3</label>
+								<label>Fach 3</label>
 								<input is="iron-input" name="subject3" type="text" bind-value="{{subject3::input}}">
 							</paper-input-container>
 
 
 							<paper-input-container>
-								<label>Password</label>
+								<label>Passwort</label>
 								<input is="iron-input" name="password" type="password" required bind-value="{{password::input}}">
 							</paper-input-container>
 
@@ -160,7 +160,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 					</paper-item>
 				</div>
 				<div id="button-create">
-					<paper-button class="submitButton" autovalidate center-center raised on-click="handleClick">Create</paper-button>
+					<paper-button class="submitButton" autovalidate center-center raised on-click="handleClick">Erstellen</paper-button>
 				</div>
 			</paper-material>
 		</div>
@@ -283,8 +283,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 					console.log(Email + password + firstName + lastName + subject1);
 
 					// alert("Error: Alle Felder müssen ausgefüllt werden");
-					this.errorType = "Input missing";
-					this.errorMessage = "Please fill out everything";
+					this.errorType = "Eingaben fehlen";
+					this.errorMessage = "Alle Felder müssen ausgefüllt werden";
 					this.$.warningDialog.toggle();
 
 				} else {
@@ -339,22 +339,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 										},
 										error: function(docent, error) {
 
-											alert('Failed to create new object, with error code: ' + error.message);
+											// alert('Failed to create new object, with error code: ' + error.message);
 										}
 									});
 
 
 								},
 								error: function(error) {
-									alert("Error: " + error.code + " " + error.message);
+									// alert("Error: " + error.code + " " + error.message);
 								}
 							});
 
 
 						},
 						error: function(user, error) {
-							// Show the error message somewhere and let the user try again.
-							alert("Error: " + error.code + " " + error.message);
+						
+							// alert("Error: " + error.code + " " + error.message);
 						}
 					});
 
