--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -10,7 +10,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Iron elements -->
 <link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
-
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/iron-localstorage/iron-localstorage.html">
@@ -19,6 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-icons/social-icons.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-list/iron-list.html">
+
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
@@ -60,33 +60,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
 
-<!-- Add your elements here -->
+<!-- Self created elements -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../bower_components/polymer-themes/candy.html">
 <link rel="import" href="signup-element/signup-element.html">
 <link rel="import" href="login-element/login-element.html">
-<link rel="import" href="user-element/user-element.html">
 <link rel="import" href="create-docent/create-docent.html">
 <link rel="import" href="create-appointment/create-appointment.html">
-
 <link rel="import" href="docent-list/docent-list.html">
 <link rel="import" href="docent-list-user/docent-list-user.html">
 <link rel="import" href="create-time/create-time.html">
-
-<link rel="import" href="times-list/times-list.html">
 <link rel="import" href="appointment-list-user/appointment-list-user.html">
 <link rel="import" href="create-rooms/create-rooms.html">
 <link rel="import" href="rooms-list/rooms-list.html">
 <link rel="import" href="loading-placeholder/loading-placeholder.html">
 <link rel="import" href="slot-list/slot-list.html">
-<link rel="import" href="warning-dialog/warning-dialog.html">
 <link rel="import" href="appointment-list-docent/appointment-list-docent.html">
 <link rel="import" href="username-display/username-display.html">
 <link rel="import" href="no-rights/no-rights.html">
-<link rel="import" href="admin-interface/admin-interface.html">
-<<<<<<< HEAD
 <link rel="import" href="profile-user/profile-user.html">
 <link rel="import" href="profile-docent/profile-docent.html">
-=======
 <link rel="import" href="docent-list-edit/docent-list-edit.html">
->>>>>>> cloudCode
+<link rel="import" href="homescreen-element/homescreen-element.html">
