--- a/app/elements/login-element/login-element.html
+++ b/app/elements/login-element/login-element.html
@@ -12,14 +12,6 @@
       padding: 0 20px 0 20px !important;
     }
 
-    /*paper-button {
-      width: 90%;
-      display: block;
-      margin-top: 30px;
-      margin-left: auto;
-      margin-right: auto;
-    }*/
-
     #login {
       margin-top: 30px;
     }
@@ -54,11 +46,11 @@
         </paper-toolbar>
       </paper-header-panel>
       <paper-input-container>
-        <label>Email</label>
+        <label>E-Mail</label>
         <input is="iron-input" name="name" type="username" required>
       </paper-input-container>
       <paper-input-container>
-        <label>Password</label>
+        <label>Passwort</label>
         <input is="iron-input" name="password" name="name" type="password" required>
       </paper-input-container>
 
@@ -77,12 +69,12 @@
       <paper-material elevation="1">
       <signup-element></signup-element>
 
-        <paper-button raised id="backButton" on-click="backToLogin">Back</paper-button>
+        <paper-button raised id="backButton" on-click="backToLogin">Zurück</paper-button>
       </paper-material>
     </div>
     <paper-toast id="loggedInToast" duration="6000">
       <iron-icon icon="done"></iron-icon>
-      <span>Successfully logged in</span>
+      <span>Erfolgreich eingeloggt</span>
     </paper-toast>
   </template>
 
@@ -177,7 +169,7 @@
             }
 
           },
-          // If there is an error
+
           error: function(user, error) {
             console.log(error);
             alert('Error!');
